--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_user_info">个人资料</string>
     <string name="title_auth_center">认证中心</string>
     <string name="auth_hint_1">您所上传的所以信息都将只用于核实您的身份，不不会向任何第三方泄漏，放心上传，认证后将享有更多权限。</string>
+    <string name="title_home">首页</string>
 </resources>
