--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="title_about">关于</string>
     <string name="title_msg">消息</string>
     <string name="title_me">我的账号</string>
+    <string name="title_select_address">选择地址</string>
+    <string name="title_select_company">选择公司</string>
+    <string name="list_empty">没有数据</string>
 </resources>
