--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="title_select_address">选择地址</string>
     <string name="title_select_company">选择公司</string>
     <string name="list_empty">没有数据</string>
+    <string name="title_g_manage">加油站</string>
+    <string name="title_add_g">添加加油记录</string>
 </resources>
